# Android-SAST

./: README.md  cli.py  dashboard_server.py  pyproject.toml
context_sast/: __init__.py  cli.py  engine.py  helpers.py  models.py
context_sast/apk_loader/: __init__.py  loader.py
context_sast/correlator/: __init__.py  engine.py
context_sast/dataflow_engine/: __init__.py  engine.py
context_sast/detectors/: __init__.py  base.py  common.py  deep_link_abuse.py  insecure_content_provider.py  intent_redirection.py  webview_misconfig.py
context_sast/dex_analyzer/: __init__.py  analyzer.py
context_sast/manifest_analyzer/: __init__.py  analyzer.py
context_sast/reports/: __init__.py  evidence.py  formatter.py
context_sast/rule_engine/: engine.py
context_sast/taint_engine/: __init__.py  engine.py
dashboard/: app.js  index.html  styles.css
