[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "context-aware-android-sast"
version = "0.1.0"
description = "Context-aware Android SAST engine for APK analysis"
requires-python = ">=3.11"
dependencies = ["androguard>=4.1.3"]

[project.scripts]
context-aware-sast = "context_sast.cli:main"
context-aware-sast-dashboard = "dashboard_server:main"
